--- a/list2.html
+++ b/list2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>雲端課堂|管理類別主題</title>
+    <title>雲端課堂|科技類別主題</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/list.css">
@@ -25,43 +25,43 @@
             <ul class="drop-down-menu">
                 <li><a href="#">學習直通車</a>
                     <ul>
-                        <li><a href="#">領導管理/危機管理</a>
+                        <li><a href="#">工業互聯網類</a>
                         </li>
-                        <li><a href="#">時間管理/ 高效工作/ 項目管理/ 危機管理</a>
+                        <li><a href="#">人工智能類</a>
                         </li>
-                        <li><a href="#">邏輯思維/ 思維導圖/ 目標管理/ 績效管理</a>
+                        <li><a href="#">5G+物聯網類</a>
                         </li>
-                        <li><a href="#">溝通/ 談判/ 有效會議</a>
+                        <li><a href="#">大數據/雲計算類</a>
                         </li>
-                        <li><a href="#">轉型變革</a>
+                        <li><a href="#">AR/VR/MR類</a>
                         </li>
                     </ul>
                 </li>
                 <li><a href="#">雲端課程</a>
                     <ul>
-                        <li><a href="#">領導管理/危機管理</a>
+                        <li><a href="#">工業互聯網類</a>
                         </li>
-                        <li><a href="#">時間管理/ 高效工作/ 項目管理/ 危機管理</a>
+                        <li><a href="#">人工智能類</a>
                         </li>
-                        <li><a href="#">邏輯思維/ 思維導圖/ 目標管理/ 績效管理</a>
+                        <li><a href="#">5G+物聯網類</a>
                         </li>
-                        <li><a href="#">溝通/ 談判/ 有效會議</a>
+                        <li><a href="#">大數據/雲計算類</a>
                         </li>
-                        <li><a href="#">轉型變革</a>
+                        <li><a href="#">AR/VR/MR類</a>
                         </li>
                     </ul>
                 </li>
                 <li><a href="#">富學寶典</a>
                     <ul>
-                        <li><a href="#">領導管理/危機管理</a>
+                        <li><a href="#">工業互聯網類</a>
                         </li>
-                        <li><a href="#">時間管理/ 高效工作/ 項目管理/ 危機管理</a>
+                        <li><a href="#">人工智能類</a>
                         </li>
-                        <li><a href="#">邏輯思維/ 思維導圖/ 目標管理/ 績效管理</a>
+                        <li><a href="#">5G+物聯網類</a>
                         </li>
-                        <li><a href="#">溝通/ 談判/ 有效會議</a>
+                        <li><a href="#">大數據/雲計算類</a>
                         </li>
-                        <li><a href="#">轉型變革</a>
+                        <li><a href="#">AR/VR/MR類</a>
                         </li>
                     </ul>
                 </li>
@@ -74,7 +74,7 @@
             <label for="tab1">基礎簡介</label>
 
             <input type="radio" id="tab2" name="tabGroup1" class="tab2">
-            <label for="tab2">進階知識</label>
+            <label for="tab2">場景運用</label>
 
             <input type="radio" id="tab3" name="tabGroup1" class="tab3">
             <label for="tab3">延伸學習</label>
@@ -85,48 +85,49 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-1.jfif" alt="">
+                                    <img src="/listpic/2-1.jfif" alt="">
                                 </div>
-                                <h2>Randy Pausch時間管理演講</h2>
-                                <h6>演講人:Randy Pausch</h6>
+                                <h2>
+                                    科技洞悉你的感受</h2>
+                                <h6>演講人:波碧·克文</h6>
                             </a>
                         </li>
                         <li class="video-list__item">
                             <a href="#">
 
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-2.jfif" alt="">
+                                    <img src="/listpic/2-2.jfif" alt="">
                                 </div>
-                                <h2>【孫運璿先生管理講座】</h2>
-                                <h6>演講人:徐重仁董事長</h6>
+                                <h2>科技將如何改造我們</h2>
+                                <h6>演講人:Ray Kurzweil</h6>
                             </a>
                         </li>
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-3.jfif" alt="">
+                                    <img src="/listpic/2-3.jfif" alt="">
                                 </div>
-                                <h2>看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
-                                <h6>演講人:Randy Pausch的</h6>
+                                <h2> 奈米科技的未來</h2>
+                                <h6>演講人:喬治．圖雷斯基</h6>
                             </a>
                         </li>
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-4.jfif" alt="">
+                                    <img src="/listpic/2-4.jfif" alt="">
                                 </div>
-                                <h2>五個步驟做好時間管理？</h2>
-                                <h6>演講人:陰森IneS</h6>
+                                <h2>談科技如何演化</h2>
+                                <h6>演講人:Kevin Kelly</h6>
                             </a>
 
                         </li>
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-5.jfif" alt="">
+                                    <img src="/listpic/2-5.jfif" alt="">
                                 </div>
-                                <h2>打造高績效的時間管理專題演講</h2>
-                                <h6>演講人:Anita Chen</h6>
+                                <h2>透過藝術來呈現出科技如何建構我們的現實</h2>
+                                <h6>演講人:李家寶</h6>
                             </a>
                         </li>
                         <ul class="pagination">
@@ -150,49 +151,50 @@
                         
                         <li class="video-list__item">
                             <a href="#">
-
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-2.jfif" alt="">
+                                    <img src="/listpic/2-3.jfif" alt="">
                                 </div>
-                                <h2>【孫運璿先生管理講座】</h2>
-                                <h6>演講人:徐重仁董事長</h6>
+                                <h2> 奈米科技的未來</h2>
+                                <h6>演講人:喬治．圖雷斯基</h6>
                             </a>
                         </li>
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-3.jfif" alt="">
+                                    <img src="/listpic/2-4.jfif" alt="">
                                 </div>
-                                <h2>看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
-                                <h6>演講人:Randy Pausch的</h6>
-                            </a>
-                        </li>
-                        <li class="video-list__item">
-                            <a href="#">
-                                <div class="video-preview-image">
-                                    <img src="/listpic/1-4.jfif" alt="">
-                                </div>
-                                <h2>五個步驟做好時間管理？</h2>
-                                <h6>演講人:陰森IneS</h6>
+                                <h2>談科技如何演化</h2>
+                                <h6>演講人:Kevin Kelly</h6>
                             </a>
 
                         </li>
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-5.jfif" alt="">
+                                    <img src="/listpic/2-5.jfif" alt="">
                                 </div>
-                                <h2>打造高績效的時間管理專題演講</h2>
-                                <h6>演講人:Anita Chen</h6>
+                                <h2>透過藝術來呈現出科技如何建構我們的現實</h2>
+                                <h6>演講人:李家寶</h6>
                             </a>
                         </li>
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-1.jfif" alt="">
+                                    <img src="/listpic/2-1.jfif" alt="">
                                 </div>
-                                <h2>Randy Pausch時間管理演講</h2>
-                                <h6>演講人:Randy Pausch</h6>
+                                <h2>
+                                    科技洞悉你的感受</h2>
+                                <h6>演講人:波碧·克文</h6>
+                            </a>
+                        </li>
+                        <li class="video-list__item">
+                            <a href="#">
+
+                                <div class="video-preview-image">
+                                    <img src="/listpic/2-2.jfif" alt="">
+                                </div>
+                                <h2>科技將如何改造我們</h2>
+                                <h6>演講人:Ray Kurzweil</h6>
                             </a>
                         </li>
                         <ul class="pagination">
@@ -217,49 +219,50 @@
                         
                         <li class="video-list__item">
                             <a href="#">
+
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-3.jfif" alt="">
+                                    <img src="/listpic/2-2.jfif" alt="">
                                 </div>
-                                <h2>看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
-                                <h6>演講人:Randy Pausch的</h6>
+                                <h2>科技將如何改造我們</h2>
+                                <h6>演講人:Ray Kurzweil</h6>
                             </a>
                         </li>
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-4.jfif" alt="">
+                                    <img src="/listpic/2-3.jfif" alt="">
                                 </div>
-                                <h2>五個步驟做好時間管理？</h2>
-                                <h6>演講人:陰森IneS</h6>
+                                <h2> 奈米科技的未來</h2>
+                                <h6>演講人:喬治．圖雷斯基</h6>
+                            </a>
+                        </li>
+                        <li class="video-list__item">
+                            <a href="#">
+                                <div class="video-preview-image">
+                                    <img src="/listpic/2-4.jfif" alt="">
+                                </div>
+                                <h2>談科技如何演化</h2>
+                                <h6>演講人:Kevin Kelly</h6>
                             </a>
 
                         </li>
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-5.jfif" alt="">
+                                    <img src="/listpic/2-5.jfif" alt="">
                                 </div>
-                                <h2>打造高績效的時間管理專題演講</h2>
-                                <h6>演講人:Anita Chen</h6>
+                                <h2>透過藝術來呈現出科技如何建構我們的現實</h2>
+                                <h6>演講人:李家寶</h6>
                             </a>
                         </li>
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-1.jfif" alt="">
+                                    <img src="/listpic/2-1.jfif" alt="">
                                 </div>
-                                <h2>Randy Pausch時間管理演講</h2>
-                                <h6>演講人:Randy Pausch</h6>
-                            </a>
-                        </li>
-                        <li class="video-list__item">
-                            <a href="#">
-
-                                <div class="video-preview-image">
-                                    <img src="/listpic/1-2.jfif" alt="">
-                                </div>
-                                <h2>【孫運璿先生管理講座】</h2>
-                                <h6>演講人:徐重仁董事長</h6>
+                                <h2>
+                                    科技洞悉你的感受</h2>
+                                <h6>演講人:波碧·克文</h6>
                             </a>
                         </li>
                         <ul class="pagination">
