--- a/Managemaent.html
+++ b/Managemaent.html
@@ -23,6 +23,7 @@
                         class="fas fa-search"></i></button>
             </div>
             <ul class="drop-down-menu">
+                <li> <a href="/Tech.html">科技</a></li>
                 <li><a href="#">學習直通車</a>
                     <ul>
                         <li><a href="#">領導管理/危機管理</a>
@@ -83,19 +84,22 @@
                 <section class="videos">
                     <ul class="video-list">
                         <li class="video-list__item">
-                            <a href="#">
+                            <a href="/detail.html">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-1.jfif" alt="">
+                                    <img src="/listpic/2-1.jfif" alt="">
                                 </div>
+
                                 <div class="Words1">
-                                    <h2>科技洞悉你的感受</h2>
-                                    <h6>演講人:波碧·克文</h6>
+                                    <h2>Randy Pausch時間管理演講</h2>
+                                    <h6>演講人:Randy Pausch</h6>
                                     <h6 class="content">
-                                        當科技比我們更了解自己時，會發生什麼事情呢？波碧·克文研究人類如何表達情緒。她認為撲克臉的時代終將結束，因為科技能輕易地讀懂我們透露出來的情緒信號。在一次演講和技術展示中，波碧·克文展示了如何透過「同理心技術」
-                                        讀懂像身體溫度和呼吸中的化學成份這些生理訊息，而這些訊息能透露我們的感受。無論好壞，克文認為「如果我們能體悟同理心的力量，就能掌握科技，用科技幫助我們跨越情感和認知的鴻溝。」
+                                        2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
+                                        這場演講十分實用，並且可一窺Randy教授平常工作的態度和對待世界的不同角度。
+                                        請下載字幕來合併觀看。
                                     </h6>
-                                    <span class="watch">觀看次數:7</span>
+                                    <span class="watch">觀看次數:781</span>
                                 </div>
+
                             </a>
                         </li>
                         <li class="video-list__item">
@@ -268,19 +272,22 @@
                             </a>
                         </li>
                         <li class="video-list__item">
-                            <a href="#">
+                            <a href="/detail.html">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-1.jfif" alt="">
+                                    <img src="/listpic/2-1.jfif" alt="">
                                 </div>
+
                                 <div class="Words1">
-                                    <h2>科技洞悉你的感受</h2>
-                                    <h6>演講人:波碧·克文</h6>
+                                    <h2>Randy Pausch時間管理演講</h2>
+                                    <h6>演講人:Randy Pausch</h6>
                                     <h6 class="content">
-                                        當科技比我們更了解自己時，會發生什麼事情呢？波碧·克文研究人類如何表達情緒。她認為撲克臉的時代終將結束，因為科技能輕易地讀懂我們透露出來的情緒信號。在一次演講和技術展示中，波碧·克文展示了如何透過「同理心技術」
-                                        讀懂像身體溫度和呼吸中的化學成份這些生理訊息，而這些訊息能透露我們的感受。無論好壞，克文認為「如果我們能體悟同理心的力量，就能掌握科技，用科技幫助我們跨越情感和認知的鴻溝。」
+                                        2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
+                                        這場演講十分實用，並且可一窺Randy教授平常工作的態度和對待世界的不同角度。
+                                        請下載字幕來合併觀看。
                                     </h6>
-                                    <span class="watch">觀看次數:7</span>
+                                    <span class="watch">觀看次數:781</span>
                                 </div>
+
                             </a>
                         </li>
                         <ul class="pagination">
@@ -360,19 +367,22 @@
                             </a>
                         </li>
                         <li class="video-list__item">
-                            <a href="#">
+                            <a href="/detail.html">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-1.jfif" alt="">
+                                    <img src="/listpic/2-1.jfif" alt="">
                                 </div>
+
                                 <div class="Words1">
-                                    <h2>科技洞悉你的感受</h2>
-                                    <h6>演講人:波碧·克文</h6>
+                                    <h2>Randy Pausch時間管理演講</h2>
+                                    <h6>演講人:Randy Pausch</h6>
                                     <h6 class="content">
-                                        當科技比我們更了解自己時，會發生什麼事情呢？波碧·克文研究人類如何表達情緒。她認為撲克臉的時代終將結束，因為科技能輕易地讀懂我們透露出來的情緒信號。在一次演講和技術展示中，波碧·克文展示了如何透過「同理心技術」
-                                        讀懂像身體溫度和呼吸中的化學成份這些生理訊息，而這些訊息能透露我們的感受。無論好壞，克文認為「如果我們能體悟同理心的力量，就能掌握科技，用科技幫助我們跨越情感和認知的鴻溝。」
+                                        2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
+                                        這場演講十分實用，並且可一窺Randy教授平常工作的態度和對待世界的不同角度。
+                                        請下載字幕來合併觀看。
                                     </h6>
-                                    <span class="watch">觀看次數:7</span>
+                                    <span class="watch">觀看次數:781</span>
                                 </div>
+
                             </a>
                         </li>
                         <li class="video-list__item">
