--- a/Tech.html
+++ b/Tech.html
@@ -24,6 +24,7 @@
             </div>
             <div class="top">
                 <ul class="drop-down-menu">
+                    <li> <a href="/Managemaent.html">管理</a></li>
                     <li><a href="#">學習直通車</a>
                         <ul>
                             <li><a href="#">工業互聯網類</a>
@@ -102,6 +103,22 @@
                                     <span class="watch">觀看次數:781</span>
                                 </div>
 
+                            </a>
+                        </li>
+                        <li class="video-list__item">
+                            <a href="#">
+                                <div class="video-preview-image">
+                                    <img src="/listpic/1-1.jfif" alt="">
+                                </div>
+                                <div class="Words1">
+                                    <h2>科技洞悉你的感受</h2>
+                                    <h6>演講人:波碧·克文</h6>
+                                    <h6 class="content">
+                                        當科技比我們更了解自己時，會發生什麼事情呢？波碧·克文研究人類如何表達情緒。她認為撲克臉的時代終將結束，因為科技能輕易地讀懂我們透露出來的情緒信號。在一次演講和技術展示中，波碧·克文展示了如何透過「同理心技術」
+                                        讀懂像身體溫度和呼吸中的化學成份這些生理訊息，而這些訊息能透露我們的感受。無論好壞，克文認為「如果我們能體悟同理心的力量，就能掌握科技，用科技幫助我們跨越情感和認知的鴻溝。」
+                                    </h6>
+                                    <span class="watch">觀看次數:7</span>
+                                </div>
                             </a>
                         </li>
                         <li class="video-list__item">
