--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p class="mtext1">雲&thinsp;&thinsp; 端</p>
 
                 <div class="select2 move4 ">
-                    <div class="stext ">管理</div>
+                    <div class="stext "><a href="/Managemaent.html">管理</a></div>
                     <div class="Options2 corner type">
                         <div class="Otext radiustop"> &ensp;工業互聯網類</div>
                         <div class="Otext"> &ensp;人工智能類</div>
@@ -74,10 +74,10 @@
                                 <div class="stext ">富學寶典</div>
                                 <div class="Options2 corner type5">
                                     <div class="Otext radiustop radiusbottom"> &ensp;導入富學寶典的學習記錄</div>
-                                </div></div>
-
+                                </div>
+                            </div>
                                 <div class="select2 move3 ">
-                                    <div class="stext ">科技</div>
+                                    <div class="stext "><a href="/Tech.html">科技</a> </div>
                                     <div class="Options2 corner type3">
                                         <div class="Otext radiustop"> &ensp;領導管理/危機管理</div>
                                         <div class="Otext"> &ensp;時間管理/ 高效工作/項目管理/ 危機管理</div>
